--- a/config.json
+++ b/config.json
@@ -1,40 +1,22 @@
 {
-    "SIMULATION": {
-        "beschleunigungsfaktor": 105.0,
-        "zeitschritt": 60,
-        "dauer": 86400,
-        "soll_temp": 30.0,
-        "soll_rel_feuchte": 60.0,
-        "initial": {
-            "temp_raum": 20.0,
-            "rel_feuchte_raum": 45.0,
-            "temp_aussen": 15.0,
-            "rel_feuchte_aussen": 40.0
-        }
-    },
-    "REGELUNG": {
-        "temp": {
-            "Kp": 0.2,
-            "Ti": 1200,
-            "Td": 30,
-            "deadband": 0.5
-        },
-        "feuchte": {
-            "Kp": 0.05,
-            "Ti": 1800,
-            "Td": 0,
-            "deadband": 3.0
-        }
-    },
-    "ANLAGE": {
-        "rotor_effizienz": 0.75,
-        "max_massenstrom": 2.5,
-        "kuehler_temp": 7.0,
-        "heizung_temp": 45.0,
-        "waermelast": 1500.0,
-        "raumvolumen": 50.0,
-        "luftdichte": 1.2,
-        "c_luft": 1005,
-        "max_befeuchtung": 0.2
-    }
+  "zeitschritt_min": 5,
+  "simulationsfaktor": 1,
+  "raum_volumen_m3": 80,
+  "luft_dichte_kg_m3": 1.2,
+  "luft_cp_kj_kgK": 1.005,
+  "aussen_temp_C": 10,
+  "aussen_feuchte_g_kg": 5,
+  "raum_temp_C": 21,
+  "raum_feuchte_g_kg": 7,
+  "soll_raum_temp_C": 22,
+  "soll_raum_feuchte_g_kg": 9,
+  "erhitzer_temp_C": 40,
+  "kuehler_temp_C": 8,
+  "zuluft_volumenstrom_m3_h": 400,
+  "abluft_volumenstrom_m3_h": 400,
+  "wrg_eta_min": 0.65,
+  "wrg_eta_max": 0.85,
+  "wrg_n_max": 100,
+  "wrg_n_start": 50,
+  "wrg_feuchteuebertragung": 0.6
 }
