--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     "X_SOL_R": 50
   },
   "waermetauscher": {
-    "n_WRG": 0.7
+    "nt_WRG": 0.7,
+    "nx_WRG": 0.2
   },
   "erhitzer": {
     "T_DIF_ERH": 10
@@ -24,8 +25,8 @@
     "p_LUF": 1.204
   },
     "ventilator": {
-    "m_LUF_min": 0.5,
-    "m_LUF_max": 10.0,
+    "m_LUF_min": 1.3,
+    "m_LUF_max": 3,
     "q_w_T": 1,
     "q_w_X": 0.7
     },
