--- a/config.json
+++ b/config.json
@@ -2,39 +2,68 @@
   "simulation": {
     "t_sp": 60,
     "T_AUL": 30,
-    "X_AUL": 30,
+    "X_AUL": 60,
     "T_SOL_R": 21,
-    "X_SOL_R": 50
+    "X_SOL_R": 50,
+    "schritte": 10000,
+    "stoerung_intervall": 60,
+    "stoerung_T_AUL_min": -0.5,
+    "stoerung_T_AUL_max": 0.5,
+    "stoerung_Q_IN_min": 50,
+    "stoerung_Q_IN_max": 50,
+    "Q_IN_min": 0,
+    "Q_IN_max": 1000,
+    "T_AUL_min": 10,
+    "T_AUL_max": 30
   },
   "waermetauscher": {
     "nt_WRG": 0.7,
     "nx_WRG": 0.2
   },
-  "erhitzer": {
-    "T_DIF_ERH": 7
+  "TEP": {
+    "T_DIF_TEP": 7
   },
   "befeuchter": {
-    "n_BFT": 0.8
-  },
-  "kuehler": {
-    "T_DIF_KUL": 5
+    "n_BFT": 1
   },
   "physik": {
     "c_LUF": 1005,
     "c_WAS": 4180,
-    "p_LUF": 1.204
+    "luftdruck_hPa": 1013.25,
+    "rel_feuchte_default": 35,
+    "rho_luft": 1.2
   },
-    "ventilator": {
+  "ventilator": {
     "m_LUF_min": 1.3,
     "m_LUF_max": 3,
     "q_w_T": 1,
     "q_w_X": 0.7
-    },
+  },
   "raum": {
     "V_R": 1000.0,
     "T_R_init": 25.0,
-    "X_R_init": 30.0,
-    "Q_IN": 500
-
+    "X_R_init": 60.0,
+    "Q_IN": 500,
+    "faktor_waermekapazitaet": 15
+  },
+  "totzeit": {
+    "totzeit_schritte": 2,
+    "totzone": 0.01
+  },
+  "regler": {
+    "X_ZUL": { "kp": 0.03, "ki": 0.08 },
+    "BFT":   { "kp": 0.003, "ki": 0.01 },
+    "T_ZUL": { "kp": 0.2,   "ki": 0.1 },
+    "TEP":   { "kp": 0.002, "ki": 0.01 }
+  },
+  "schwellenwerte": {
+    "T_ZUL_min": 15,
+    "T_ZUL_max": 24,
+    "X_ZUL_min": 4,
+    "X_ZUL_max": 15,
+    "d_max_min": 0.1,
+    "d_max_max": 2.0,
+    "dT_RA_SOL": 0.2,
+    "dX_RA_SOL": 0.1
   }
 }
